[server] add namespace support to enumeration items (#1464)
* prep namespacing

* add namespacing to EnumerationItemMaintainer

* add auto migration

* update tests - enumerator cannot pass namespace anymore